--- a/keystore.properties
+++ b/keystore.properties
@@ -1,4 +1,4 @@
-storePassword=yijian
-keyPassword=yijian
-keyAlias=yijian-arbitrator
-storeFile=/home/zz/zz/dev/android/key/arbitrator-release-key.keystore
+storePassword=zz963852741
+keyPassword=zz963852741
+keyAlias=gar
+storeFile=/home/zz/zz/dev/android/key/gar.jks
