--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'com.android.application'
-
+apply plugin: 'walle'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
 
@@ -76,7 +76,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 //    implementation 'com.android.support:appcompat-v7:28.0.0'
 //    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 
@@ -91,7 +91,6 @@ dependencies {
 
     //leakCanary
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    implementation 'com.android.support:support-v4:26.1.0'
     debugImplementation rootProject.ext.dependencies["leakcanary-android"]
     releaseImplementation rootProject.ext.dependencies["leakcanary-android-no-op"]
     // Optional, if you use support library fragments:
@@ -104,7 +103,7 @@ dependencies {
 //    implementation rootProject.ext.dependencies["MPAndroidChart"]
     implementation rootProject.ext.dependencies["signature"]
 //    implementation rootProject.ext.dependencies["image-picker"]
-//    implementation rootProject.ext.dependencies["android-pickerview"]
+    implementation rootProject.ext.dependencies["android-pickerview"]
 //    implementation rootProject.ext.dependencies["android-pdf-viewer"]
 
     // 底部菜单
@@ -149,10 +148,22 @@ dependencies {
     //    implementation rootProject.ext.dependencies["dagger-android-support"] // // if you use the support libraries
     //    kapt rootProject.ext.dependencies["dagger-android-processor"]
 
+    implementation rootProject.ext.dependencies["walle"]
+
+
     implementation rootProject.ext.dependencies["easypermissions"]
 
     api rootProject.ext.dependencies["multidex"]
 }
 androidExtensions {
     experimental = true
+}
+
+walle {
+    // 指定渠道包的输出路径
+    apkOutputFolder = new File("${project.buildDir}/outputs/channels")
+    // 定制渠道包的APK的文件名称
+    apkFileNameFormat = '${appName}-${packageName}-${channel}-${buildType}-v${versionName}-${versionCode}-${buildTime}.apk'
+    // 渠道配置文件
+    channelFile = new File("${project.getProjectDir()}/channel")
 }
