--- a/build.gradle
+++ b/build.gradle
@@ -3,18 +3,21 @@ apply from: "config.gradle"
 
 buildscript {
     ext.kotlin_version = '1.3.11'
+    ext.walle_version = '1.1.6'
     repositories {
         mavenCentral()
         google()
-//        jcenter()
-        maven{ url 'http://maven.aliyun.com/nexus/content/groups/public/'}
+        jcenter()
         maven { url 'https://jitpack.io' }
         maven { url 'https://maven.google.com' }
-        
+        maven{ url 'http://maven.aliyun.com/nexus/content/groups/public/'}
+
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.3.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "com.meituan.android.walle:plugin:$walle_version"
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -22,11 +25,13 @@ buildscript {
 
 allprojects {
     repositories {
+        mavenCentral()
+
         google()
-//        jcenter()
-        maven{ url 'http://maven.aliyun.com/nexus/content/groups/public/'}
+        jcenter()
         maven { url "https://jitpack.io" }
         maven { url 'https://maven.google.com' }
+        maven{ url 'http://maven.aliyun.com/nexus/content/groups/public/'}
     }
 }
 
